--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon-solware.png" />
-    <title>Manual de Shopify — Solware</title>
-    <meta name="description" content="Guía operativa para tiendas Shopify (web + POS) — Solware" />
-    <meta name="author" content="Solware" />
+    <title>Manual SolHub</title>
+    <meta name="description" content="Guía operativa para tiendas Shopify (web + POS) — SolHub" />
+    <meta name="author" content="SolHub" />
 
     <!-- Meta Open Graph para compartir en redes sociales -->
-    <meta property="og:title" content="Manual de Shopify — Solware" />
-    <meta property="og:description" content="Guía operativa para tiendas Shopify (web + POS) — Solware" />
+    <meta property="og:title" content="Manual SolHub" />
+    <meta property="og:description" content="Guía operativa para tiendas Shopify (web + POS) — SolHub" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon-solware.png" />
 
