--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon-solware.png" />
     <title>Manual SolHub</title>
-    <meta name="description" content="Guía operativa para tiendas Shopify (web + POS) — SolHub" />
+    <meta name="description" content="Guía operativa para tu tienda (web + POS) — SolHub" />
     <meta name="author" content="SolHub" />
 
     <!-- Meta Open Graph para compartir en redes sociales -->
     <meta property="og:title" content="Manual SolHub" />
-    <meta property="og:description" content="Guía operativa para tiendas Shopify (web + POS) — SolHub" />
+    <meta property="og:description" content="Guía operativa para tu tienda (web + POS) — SolHub" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon-solware.png" />
 
